make fonts responsive

--- a/report/components/nu-modal.html
+++ b/report/components/nu-modal.html
@@ -60,7 +60,7 @@
         }
 
         h1 {
-            font-size: 32px;
+            font-size: calc(var(--font-size, 16px) * 2);
             font-weight: 500;
             line-height: 48px;
             align-items: baseline;
@@ -93,7 +93,7 @@
             color: var(--text-color);
             border: 2px solid var(--text-color);
             text-align: center;
-            font-size: 16px;
+            font-size: var(--font-size, 16px);
             display: inline-block;
             background: none;
             min-width: 200px;
