--- a/report/components/nu-panel.html
+++ b/report/components/nu-panel.html
@@ -8,7 +8,7 @@
     </section>
     <style>
         :host {
-            --font-size: 16px;
+            --panel-font-size: var(--font-size, 16px);
         }
 
         aside {
@@ -22,12 +22,12 @@
             flex: 1;
             align-items: baseline;
             font-weight: 500;
-            font-size: calc(var(--font-size) * 2);
-            line-height: calc(var(--font-size) * 3);
+            font-size: calc(var(--panel-font-size) * 2);
+            line-height: calc(var(--panel-font-size) * 3);
             margin: 10px 1rem 10px 0;
         }
         section {
-            font-size: calc(var(--font-size) * 1.25);
+            font-size: calc(var(--panel-font-size) * 1.25);
         }
         section .icon-expand {
             cursor: pointer;
